docs(website): fix colors, content and remove not used images

--- a/packages/website/docs/custom-adapter.mdx
+++ b/packages/website/docs/custom-adapter.mdx
@@ -9,7 +9,7 @@ To do this, you'll need to pass the following properties to the `adapter` proper
 | Param     | Description | HTTP analogy |
 |-----------|-------------| ------------- |
 | getPathname  | The path which will be parsed and matched with file           | `/products/123/options/78` |
-| getMethod | Refers to spefic action. Used in [object type files.](/docs/intro#object-with-methods)           | `GET`, `POST`, `PATCH` |
+| getMethod | Refers to spefic action. Used in [object type files.](docs/usage-guide#object-with-methods)           | `GET`, `POST`, `PATCH` |
 | defaultNotFoundHandler  | Callback which will be invoked when no file is found           | |
 
 Example for websockets.
