--- a/packages/website/docs/usage-guide.mdx
+++ b/packages/website/docs/usage-guide.mdx
@@ -61,7 +61,7 @@ For instance, for Express.js it will be: `function(req, res, next, routeParams)`
 
 Get the route params from dynamic paths in the last argument. For instance,
 in this file `/users/[productId]/orders/[orderId].js` these params are available:
-`{ productId, orderId }`. More details are described on the [route matching part](/docs/category/route-matching).
+`{ productId, orderId }`. More details are described on the [route matching part](/docs/route-matching).
 
 ## Object with methods
 
