--- a/packages/website/docs/custom-adapter.mdx
+++ b/packages/website/docs/custom-adapter.mdx
@@ -3,16 +3,16 @@ import TabItem from '@theme/TabItem';
 
 # Custom Adapter
 
-In order to use protocols other than HTTP, or to use different frameworks, you can write your own adapter.
-To do this, you'll need to pass the following properties to the `adapter` property:
+If you want to use protocols other than HTTP or different frameworks, you can create your own adapter.
+To do this, you will need to pass the following properties to the `adapter` property:
 
 | Param     | Description | HTTP analogy |
 |-----------|-------------| ------------- |
-| getPathname  | The path which will be parsed and matched with file           | `/products/123/options/78` |
-| getMethod | Refers to spefic action. Used in [object type files.](docs/usage-guide#object-with-methods)           | `GET`, `POST`, `PATCH` |
-| defaultNotFoundHandler  | Callback which will be invoked when no file is found           | |
+| getPathname  | The path that will be parsed and matched with the file.         | `/products/123/options/78` |
+| getMethod | Refers to a specific action. This is used in [object type files.](/docs/usage-guide#object-with-methods)           | `GET`, `POST`, `PATCH` |
+| defaultNotFoundHandler  | This callback will be invoked when no file is found.         | |
 
-Example for websockets.
+Example for WebSockets.
 
 <Tabs>
   <TabItem value="javascript" label="JavaScript" default>
@@ -50,4 +50,4 @@ const useFileRouter = await initFileRouter({
   </TabItem>
 </Tabs>
 
-Check out the `/examples/web-socket` to get working sample.
+To get a working sample, check out [/examples/web-socket](https://github.com/Danilqa/node-file-router/tree/main/examples/web-socket/src) in the repository.
