feat: support method routing for index docs(usage-guide): described method routing

--- a/website/docs/getting-started.mdx
+++ b/website/docs/getting-started.mdx
@@ -101,7 +101,7 @@ You should see the message `Welcome to our shop!` displayed.
 
 #### Congratulations! 🎉 You've created a first file route
 
-## Add http methods
+## Add HTTP Methods
 
 1. Before we start, we need a small utility function which will parse json from a request.
 Create a folder `utils` and put `http.utils.js` file inside.
@@ -168,7 +168,7 @@ The response should display `a product will be created` along with your content.
 
 #### Perfect! 🎉 Let's move on
 
-# Dynamic routes
+# Dynamic Routes
 
 1. Create a new file with the name `[id]` inside the `product` folder.
   ```
@@ -232,7 +232,7 @@ The page should display a list of categories: `'men','sneakers','nike'`
 
 #### 🥁 That's it!
 
-# What's next?
+# What's Next?
 
 1. [Discover more capabilities of the routing system](/docs/route-matching)
 2. [Configuration and More Details](/docs/route-matching)
