--- a/website/docs/use-with-bun.mdx
+++ b/website/docs/use-with-bun.mdx
@@ -41,9 +41,9 @@ export default function notFound() {
 }
 ```
 
-## Handlers implementation
+## Handlers Implementation
 
-### Basic handler
+### Basic Handler
 
 Bun operates with a `Response` object that should be returned. Therefore, the API handlers look like the following:
 
