docs(usage-guide): improve writing and fix spelling

--- a/website/docs/usage-guide.mdx
+++ b/website/docs/usage-guide.mdx
@@ -98,7 +98,7 @@ const useFileRouter = await initFileRouter({
 
 ## Methods Routing
 
-The library provides different options to route methods.
+The library offers various options for routing methods.
 
 :::tip Note
 
