fix(website): improve docs, fix CLS issues, revert code themes

--- a/website/docs/getting-started.mdx
+++ b/website/docs/getting-started.mdx
@@ -22,19 +22,13 @@ Ready-to-run examples with TypeScript, ECMAScript module types, and more can be 
 
 <Tabs>
   <TabItem value="npm" label="npm" default>
-    <CodeBlock language="bash">
-      npm install node-file-router
-    </CodeBlock>
+    <CodeBlock language="bash">npm install node-file-router</CodeBlock>
   </TabItem>
   <TabItem value="yarn" label="Yarn">
-    <CodeBlock language="bash">
-      yarn add node-file-router
-    </CodeBlock>
+    <CodeBlock language="bash">yarn add node-file-router</CodeBlock>
   </TabItem>
   <TabItem value="pnpm" label="pnpm">
-    <CodeBlock language="bash">
-      pnpm add node-file-router
-    </CodeBlock>
+    <CodeBlock language="bash">pnpm add node-file-router</CodeBlock>
   </TabItem>
 </Tabs>
 
