--- a/website/docs/usage-guide.mdx
+++ b/website/docs/usage-guide.mdx
@@ -96,6 +96,31 @@ const useFileRouter = await initFileRouter({
 });
 ```
 
+### Clean Import Cache
+
+**name**: `cleanImportCache`, **default value**: `false`\
+**env:** works only with CommonJS modules for now
+
+By default, Node.js caches the imported files. This means that if you change route handler files during the process
+runtime, the changes will not be applied even if you re initialise file router.
+
+To avoid this, you can enable the `cleanImportCache` option and reinitialize the router. For example:
+
+```js
+let useFileRouter = await initFileRouter();
+
+const server = http.createServer(async (req, res) => {
+  if (req.url === '/refresh') {
+    useFileRouter = await initFileRouter({ clearImportCache: true });
+    res.end('done');
+    return;
+  }
+
+  useFileRouter(req, res);
+});
+```
+
+
 ## Methods Routing
 
 The library offers various options for routing methods.
