docs: fix typos and improve writing

--- a/website/docs/usage-guide.mdx
+++ b/website/docs/usage-guide.mdx
@@ -104,8 +104,8 @@ const useFileRouter = await initFileRouter({
 By default, Node.js caches the imported files. This means that if you change route handler files during runtime,
 the changes will not be applied even if you initialize the file router.
 
-To avoid this, you can enable the `clearImportCache` option and reinitialize the router. It will clean cache before
-import a file.
+To avoid this, you can enable the `clearImportCache` option and reinitialize the router. It will clean the cache before
+importing a file.
 
 For example:
 
